<resources>
    <string name="app_name">Guess Capitals</string>
    <string name="resultado_screen_title">Final result</string>
    <string name="ranking_screen_title">Ranking</string>
    <string name="share_message">\nMy score is %d, can you get over me?\n\n</string>
    <string name="share_message_general">\nThis is a great app and it\'s free!.\n\n</string>
    <string name="choose_one">Choose:</string>
    <string name="other_apps">Other applications</string>
    <string name="life">life</string>
    <string name="play">Play</string>
    <string name="play_again">Play again</string>
    <string name="share">Share</string>
    <string name="rate_on_play_store">Rate on play store</string>
    <string name="result">Result: %d</string>
    <string name="personal_record">Personal record: %s</string>
    <string name="world_record">World record: %s</string>
    <string name="best_points">Best scores</string>
    <string name="dialog_ranking_congratulation">¡Congratulations</string>
    <string name="dialog_ranking_description">Your score has entered the world ranking</string>
    <string name="dialog_name">Name</string>
    <string name="dialog_save">Save</string>
    <string name="best_score">Best scores</string>
    <string name="not_exist">Not exist</string>
    <string name="by_flag">By Flag</string>
    <string name="by_country">By country</string>
    <string name="settings">Settings</string>
    <string name="learn">Learn</string>

    <!-- Settings screen -->
    <string name="settings_version">Version</string>
    <string name="settings_delete_ads">Delete ads</string>
    <string name="settings_delete_ads_summary">Remove ads forever</string>
    <string name="settings_sounds">Sounds</string>
    <string name="settings_rate_app">Rate app</string>
    <string name="settings_rate_app_summary">Go to play store to rate app</string>
    <string name="settings_more_apps">More application</string>
    <string name="settings_more_apps_summary">Free applications recommended</string>
    <string name="settings_share">Share with your friends</string>
    <string name="settings_share_summary">Share with your friend this application to play with them</string>
    <string name="more_apps">More applications</string>
    <string name="know_more">Know more</string>
    <string name="sounds_on">Sound on</string>
    <string name="sounds_off">Sound off</string>
    <string name="read_info">Info</string>

    <!-- content description image -->
    <string name="game_title">game title</string>
    <string name="loading_image">loading</string>
    <string name="back">back</string>
    <string name="game_image">image to guess</string>
    <string name="score_image_background">background</string>
    <string name="locale">en</string>

    <!-- Info screen -->
    <string name="info_title">Information</string>
    <string name="region">Region: %s</string>
    <string name="capital">Capital: %s</string>
    <string name="currency">Currency:</string>
    <string name="language">Languages:</string>
    <string name="currencies">%s (%s) \n</string>
    <string name="languages">%s (%s) \n</string>
    <string name="population">Poulation: %s hab</string>
    <string name="area">Area: %s m²</string>
    <string name="prefix">Prefix: %s</string>

    <!-- Dialog screen extra life -->
    <string name="dialog_extra_life_title">Extra life</string>
    <string name="dialog_extra_life_description">Do you want an extra life watching an ad?</string>
    <string name="dialog_extra_life_btn_yes">Yes</string>
    <string name="dialog_extra_life_btn_no">No</string>
</resources>