<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.select.SelectFragment" >

    <ImageView
        android:id="@+id/imageManuscript"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".4"
        android:contentDescription="@string/game_title"
        android:src="@drawable/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/world"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnStartByFlag"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/imageManuscript"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="24dp"
        android:elevation="12dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_button_start">

            <ImageView
                android:id="@+id/imageByFlag"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/image_flag"
                android:layout_marginEnd="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/textByFlag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/by_flag"
                android:gravity="center"
                android:textAppearance="@style/Bold.TextTitleColor.VeryLarge"
                android:fontFamily="@font/rock_salt_regular"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageByFlag"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnStartByCountry"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/btnStartByFlag"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="24dp"
        android:elevation="12dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_button_start">

            <ImageView
                android:id="@+id/imageByCountry"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:src="@drawable/image_country"
                android:layout_marginEnd="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/textByCountry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/by_country"
                android:gravity="center"
                android:textAppearance="@style/Bold.TextTitleColor.VeryLarge"
                android:fontFamily="@font/rock_salt_regular"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageByCountry"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnLearn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/btnStartByCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="24dp"
        android:elevation="12dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_button_start">

            <ImageView
                android:id="@+id/imageLearn"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:src="@drawable/image_learn"
                android:layout_margin="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/textLearn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/learn"
                android:gravity="center"
                android:textAppearance="@style/Bold.TextTitleColor.VeryLarge"
                android:fontFamily="@font/rock_salt_regular"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageLearn"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/btnLearn"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="24dp"
        android:elevation="12dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_button_start">

            <ImageView
                android:id="@+id/imageSettings"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:src="@drawable/image_settings"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/textSettings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:gravity="center"
                android:textAppearance="@style/Bold.TextTitleColor.VeryLarge"
                android:fontFamily="@font/rock_salt_regular"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageSettings"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>